--- a/tpvics_shrc/frmMSHIMG.resx
+++ b/tpvics_shrc/frmMSHIMG.resx
@@ -7279,7 +7279,7 @@
         737r3Xvfuvdf/9k=
 </value>
   </data>
-  <data name="mhremarks.Mask" xml:space="preserve">
+  <data name="mh030a.Mask" xml:space="preserve">
     <value>&gt;????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????</value>
   </data>
   <data name="mh01104.Mask" xml:space="preserve">
